Remove package statement, fix property names and update readme

--- a/src/MQTTNodes/ComIbmEventInput.properties
+++ b/src/MQTTNodes/ComIbmEventInput.properties
@@ -1,7 +1,7 @@
 #This is a generated file.
 # The values in this file have syntax:   key = value
 #User modifications to the values in this file will be preserved
-#Mon Oct 07 16:53:56 BST 2013
+#Sun Oct 13 07:40:35 BST 2013
 Property.validateMaster=Validate
 Property.eventEnabled=Enabled
 Group.validation=Validation
@@ -14,7 +14,7 @@ validateFixup.none=None
 Property.nsMappingTable=nsMappingTable
 Property.clientId=Client ID
 validateMaster.content=Content
-Property.parserXmlnscBuildTreeUsingXMLSchema=parserXmlnscBuildTreeUsingXMLSchema
+Property.parserXmlnscBuildTreeUsingXMLSchema=Build tree using XML schema data types
 Property.messageSetProperty=Message model
 validateTiming.deferred=On Demand
 Property.namespace=namespace
@@ -28,7 +28,7 @@ Property.parserXmlnscMixedContentRetainMode=Retain mixed content
 parserXmlnscProcessingInstructionsRetainMode.all=All
 Property.eventIdentity=Event Name
 Property.eventFilter=Event Filter
-Group.parserOptions.sub=parserOptions.sub
+Group.parserOptions= Parser Options
 Property.validateTiming=Parse timing
 validateFailureAction.userTrace=User Trace
 parserXmlnscCommentsRetainMode.none=None
