Added support for QoS

--- a/src/MQTTNodes/ComIbmEventInput.properties
+++ b/src/MQTTNodes/ComIbmEventInput.properties
@@ -1,7 +1,7 @@
 #This is a generated file.
 # The values in this file have syntax:   key = value
 #User modifications to the values in this file will be preserved
-#Sun Oct 13 07:40:35 BST 2013
+#Tue Nov 19 15:17:35 PST 2013
 Property.validateMaster=Validate
 Property.eventEnabled=Enabled
 Group.validation=Validation
@@ -19,6 +19,8 @@ Property.messageSetProperty=Message model
 validateTiming.deferred=On Demand
 Property.namespace=namespace
 Group.monitoring=Monitoring
+qualityOfService.atLeastOnce=1 - At least once
+Property.qualityOfService=Quality of service
 validateFailureAction.localError=Local Error Log
 parserXmlnscProcessingInstructionsRetainMode.none=None
 Property.messageTypeProperty=Message
@@ -28,7 +30,7 @@ Property.parserXmlnscMixedContentRetainMode=Retain mixed content
 parserXmlnscProcessingInstructionsRetainMode.all=All
 Property.eventIdentity=Event Name
 Property.eventFilter=Event Filter
-Group.parserOptions= Parser Options
+Group.parserOptions.sub=parserOptions.sub
 Property.validateTiming=Parse timing
 validateFailureAction.userTrace=User Trace
 parserXmlnscCommentsRetainMode.none=None
@@ -41,6 +43,7 @@ Property.messageDomainProperty=Message domain
 Property.brokerUrl=Connection URL
 Property.eventSourceDescription=Event Source
 Property.connectorName=Connector name
+qualityOfService.exactlyOnce=2 - Exactly once
 Property.monitorEvents=
 Property.validateFailureAction=Failure action
 validateMaster.contentAndValue=Content and Value
@@ -52,6 +55,7 @@ ComIbmEventInput=MQTT Input
 parserXmlnscMixedContentRetainMode.none=None
 Property.nsPrefix=nsPrefix
 validateFailureAction.exceptionList=Exception List
+qualityOfService.atMostOnce=0 - At most once
 OutTerminal.catch=Catch
 Property.messageFormatProperty=Physical format
 Property.elements=Elements
