--- a/src/MQTTNodes/ComIbmOutput.properties
+++ b/src/MQTTNodes/ComIbmOutput.properties
@@ -1,7 +1,7 @@
 #This is a generated file.
 # The values in this file have syntax:   key = value
 #User modifications to the values in this file will be preserved
-#Tue Sep 17 14:28:55 EDT 2013
+#Tue Nov 19 15:19:23 PST 2013
 Property.validateMaster=Validate
 Property.eventEnabled=Enabled
 Group.validation=Validation
@@ -13,11 +13,13 @@ validateFixup.none=None
 Property.nsMappingTable=nsMappingTable
 Property.clientId=Client ID
 ComIbmOutput=MQTT Output
-validateMaster.content=Content
 InTerminal.in=In
+validateMaster.content=Content
 Group.security=security
 Property.namespace=namespace
 Group.monitoring=Monitoring
+qualityOfService.atLeastOnce=1 - At least once
+Property.qualityOfService=Quality of service
 validateFailureAction.localError=Local Error Log
 Property.securityProfileName=securityProfileName
 validateMaster.inherit=Inherit
@@ -30,11 +32,13 @@ Property.validateFixup=validateFixup
 Property.brokerUrl=Connection URL
 Property.connectorName=Connector name
 Property.eventSourceDescription=Event Source
+qualityOfService.exactlyOnce=2 - Exactly once
 Property.monitorEvents=
 Property.validateFailureAction=Failure action
 validateMaster.contentAndValue=Content and Value
 OutTerminal.failure=Failure
 validateFixup.full=Full
+qualityOfService.atMostOnce=0 - At most once
 Property.nsPrefix=nsPrefix
 validateFailureAction.exceptionList=Exception List
 validateMaster.none=None
