create feature for MQTTNodes for installation in toolkit

--- a/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmEventInput.properties
+++ b/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmEventInput.properties
@@ -1,7 +1,7 @@
 #This is a generated file.
 # The values in this file have syntax:   key = value
 #User modifications to the values in this file will be preserved
-#Sun Oct 13 07:40:35 BST 2013
+#Tue Nov 26 15:07:04 GMT 2013
 Property.validateMaster=Validate
 Property.eventEnabled=Enabled
 Group.validation=Validation
@@ -16,6 +16,7 @@ Property.clientId=Client ID
 validateMaster.content=Content
 Property.parserXmlnscBuildTreeUsingXMLSchema=Build tree using XML schema data types
 Property.messageSetProperty=Message model
+Property.connectionUrl=Connection URL
 validateTiming.deferred=On Demand
 Property.namespace=namespace
 Group.monitoring=Monitoring
@@ -28,7 +29,7 @@ Property.parserXmlnscMixedContentRetainMode=Retain mixed content
 parserXmlnscProcessingInstructionsRetainMode.all=All
 Property.eventIdentity=Event Name
 Property.eventFilter=Event Filter
-Group.parserOptions= Parser Options
+Group.parserOptions.sub=Parser Options
 Property.validateTiming=Parse timing
 validateFailureAction.userTrace=User Trace
 parserXmlnscCommentsRetainMode.none=None
@@ -38,7 +39,6 @@ Property.parserXmlnscCommentsRetainMode=Retain comments
 validateFailureAction.exception=Exception
 Property.validateFixup=Fix
 Property.messageDomainProperty=Message domain
-Property.brokerUrl=Connection URL
 Property.eventSourceDescription=Event Source
 Property.connectorName=Connector name
 Property.monitorEvents=
@@ -48,7 +48,7 @@ Property.parserXmlnscProcessingInstructionsRetainMode=Retain processing instruct
 OutTerminal.failure=Failure
 validateFixup.full=Full
 parserXmlnscMixedContentRetainMode.all=all
-ComIbmEventInput=MQTT Input
+ComIbmEventInput=MQTT Subscribe
 parserXmlnscMixedContentRetainMode.none=None
 Property.nsPrefix=nsPrefix
 validateFailureAction.exceptionList=Exception List
