--- a/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmOutput.properties
+++ b/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmOutput.properties
@@ -12,7 +12,7 @@ Property.topicName=Topic name
 validateFixup.none=None
 Property.nsMappingTable=nsMappingTable
 Property.clientId=Client ID
-ComIbmOutput=MQTT Output
+ComIbmOutput=MQTT Publish
 validateMaster.content=Content
 InTerminal.in=In
 Group.security=security
@@ -27,7 +27,7 @@ validateFailureAction.userTrace=User Trace
 Group.basic=Basic
 validateFailureAction.exception=Exception
 Property.validateFixup=validateFixup
-Property.brokerUrl=Connection URL
+Property.connectionUrl=Connection URL
 Property.connectorName=Connector name
 Property.eventSourceDescription=Event Source
 Property.monitorEvents=
