--- a/src/MQTTNodes/palette.properties
+++ b/src/MQTTNodes/palette.properties
@@ -1,9 +1,9 @@
 #This is a generated file.
 # The values in this file have syntax:   key = value
 #User modifications to the values in this file will be preserved
-#Wed Oct 09 15:24:33 BST 2013
-tooltip.ComIbmOutput=MQTT Output
+#Tue Nov 26 15:07:05 GMT 2013
+tooltip.com.ibm.connector.mqtt.ComIbmOutput=Use the MQTTPublish node to publish messages to an MQTT topic
 category.name=MQTT
-entry.ComIbmEventInput=MQTTInput
-entry.ComIbmOutput=MQTTOutput
-tooltip.ComIbmEventInput=MQTT Input
+entry.com.ibm.connector.mqtt.ComIbmEventInput=MQTTSubscribe
+tooltip.com.ibm.connector.mqtt.ComIbmEventInput=Use the MQTTSubscribe node to subscribe to one or more MQTT topics
+entry.com.ibm.connector.mqtt.ComIbmOutput=MQTTPublish
