--- a/src/MQTTNodes/build.properties
+++ b/src/MQTTNodes/build.properties
@@ -1,5 +1,20 @@
 #
 #Tue Sep 17 14:41:30 EDT 2013
 output..=bin/
-bin.includes=META-INF/,**/*.msgnode,**/*.templatemsgnode,**/*.msgflow,**/*.properties,**/*.custom,**/*.esql,**/*.map,**/*.msgmap,HelpContexts.xml,palette.xmi,plugin.xml,icons/,.,generated/
+bin.includes = META-INF/,\
+               **/*.msgnode,\
+               **/*.templatemsgnode,\
+               **/*.msgflow,\
+               **/*.properties,\
+               **/*.custom,\
+               **/*.esql,\
+               **/*.map,\
+               **/*.msgmap,\
+               HelpContexts.xml,\
+               palette.xmi,\
+               plugin.xml,\
+               icons/,\
+               .,\
+               generated/,\
+               PDHelp.xml
 source..=src/
