MQTT Node latest bug fixes and updates
This update brings the node in line with the GA code in the
Manufacturing Pack 1.0.0.1

--- a/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmEventInput.properties
+++ b/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmEventInput.properties
@@ -1,7 +1,8 @@
 #This is a generated file.
 # The values in this file have syntax:   key = value
 #User modifications to the values in this file will be preserved
-#Tue Nov 26 15:07:04 GMT 2013
+#Fri Jun 06 19:17:51 IST 2014
+Property.port=Port
 Property.validateMaster=Validate
 Property.eventEnabled=Enabled
 Group.validation=Validation
@@ -16,7 +17,6 @@ Property.clientId=Client ID
 validateMaster.content=Content
 Property.parserXmlnscBuildTreeUsingXMLSchema=Build tree using XML schema data types
 Property.messageSetProperty=Message model
-Property.connectionUrl=Connection URL
 validateTiming.deferred=On Demand
 Property.namespace=namespace
 Group.monitoring=Monitoring
@@ -29,6 +29,7 @@ Property.parserXmlnscMixedContentRetainMode=Retain mixed content
 parserXmlnscProcessingInstructionsRetainMode.all=All
 Property.eventIdentity=Event Name
 Property.eventFilter=Event Filter
+Group.parserOptions=Parser Options
 Group.parserOptions.sub=Parser Options
 Property.validateTiming=Parse timing
 validateFailureAction.userTrace=User Trace
@@ -57,4 +58,5 @@ Property.messageFormatProperty=Physical format
 Property.elements=Elements
 validateMaster.none=None
 validateTiming.complete=Complete
+Property.hostName=Host name
 Property.parserXmlnscUseForXmlnsDomain=Use XMLNSC compact parser for XMLNS domain
