--- a/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmOutput.properties
+++ b/src/MQTTNodes/com/ibm/connector/mqtt/ComIbmOutput.properties
@@ -1,7 +1,8 @@
 #This is a generated file.
 # The values in this file have syntax:   key = value
 #User modifications to the values in this file will be preserved
-#Tue Sep 17 14:28:55 EDT 2013
+#Fri Jun 06 19:26:15 IST 2014
+Property.port=Port
 Property.validateMaster=Validate
 Property.eventEnabled=Enabled
 Group.validation=Validation
@@ -27,7 +28,6 @@ validateFailureAction.userTrace=User Trace
 Group.basic=Basic
 validateFailureAction.exception=Exception
 Property.validateFixup=validateFixup
-Property.connectionUrl=Connection URL
 Property.connectorName=Connector name
 Property.eventSourceDescription=Event Source
 Property.monitorEvents=
@@ -38,3 +38,4 @@ validateFixup.full=Full
 Property.nsPrefix=nsPrefix
 validateFailureAction.exceptionList=Exception List
 validateMaster.none=None
+Property.hostName=Host name
